--- a/index.html
+++ b/index.html
@@ -6457,6 +6457,187 @@ muy tarde
 muy
 muy
 muy
+nacatamal
+nacer
+nación
+nación tenochca
+nada
+nada
+nada
+nadador
+nadar 
+nadie
+nahua
+nahua
+nahuas
+naipe
+nalga
+Namibia
+namibio
+nana
+nana
+Nanahuatl 
+nanche 
+Napoles
+naranja
+naranja
+naranjo 
+naranjo 
+narciso 
+narcotraficante
+narcotráfico
+nardo
+nariz aguileña
+nariz chata
+nariz
+nariz recta
+nata
+natación
+natación
+natural
+naturaleza
+Naucalpan 
+naufragar
+naufragio
+naufrago
+Nauru
+nauyaca
+navaja de rasurar
+navaja
+Navarra
+navarro
+nave espacial
+navegación 
+navegante
+navidad
+Nayarit 
+nayarita
+nebulosa
+necedad
+necesario
+necesidad
+necio
+negación
+negación 
+negar
+negar
+negligencia
+negociado
+negociar 
+negociar 
+negocio
+negro
+negro
+negro
+negro
+negro
+negrura
+nemontemi 
+neoleonés
+neoleonés
+neomexicano
+neozelandés
+Nepal
+nepalés
+nepalés
+Neptuno
+nervio
+nervioso
+nervioso
+neumonía
+nevada
+nevar
+Nextlalpan 
+Nezahualcoyotl 
+Nezahualpilli 
+ni
+ni- 
+ni
+Nicaragua 
+nido de pájaro
+niebla
+nieto
+nieve
+nieve
+Níger
+Nigeria
+nigeriano
+nigua
+ninfa
+niña
+niñas
+niñería
+niñez
+niño llorón
+niño
+niño
+niños
+niñosuertos
+níspero
+nivel
+no le hace
+no querer
+no ver
+no
+no
+nobles
+nobles
+nobles
+nobleza
+nobleza
+nobleza
+noche
+Nochistlán 
+nogal 
+nombrar
+nombrar
+nombre
+nopal azul
+nopal
+Nopala 
+nopalillo 
+Nopaltepec 
+norte
+norteño
+Noruega
+noruego
+nosotros
+noticia
+noticiero
+notificar 
+novedad
+novedad
+noveno
+noventa
+noventa y cinco
+novia amante
+novicio
+noviembre
+novio
+nube
+nube obscura
+nublado
+nublar
+nuca
+nuera
+Nuestra Señora de Guadalupe
+nuestro dios
+nuestro
+Nueva españa
+Nueva España
+nueve
+nuevo
+Nuevo Léon
+Nuevo México
+nuez
+numeración
+número
+número
+nunca
+nutría 
+nutríaarina 
+ñoñería
+ñoño
 </div>
 
 <div class="nahuatl">
@@ -12875,6 +13056,187 @@ oc teotlactzinco
 huel
 tlahuel
 ecyolotli
+nacatamalli
+tlacati
+tlahtocayotl
+tenochtlalpan
+amotlein
+amitla
+atle
+aquizani
+maneloa
+ayac
+nahuatl 1
+nahuatlacatl
+nahuah
+amapatolli
+tzintli
+Namibia
+namibiatl
+coconetlatoc
+nana
+Nanahuatl
+nantzin 2
+Napolli
+lalaxtli
+chilcoztic
+lalaxcuahuitl
+ayocuahuitl
+yoyotli
+cochipanamacac
+cochipatiliztli
+omixochitl
+cuauhyacatl
+pitzahuayacatl
+yacatl
+patlayacatl
+apotzonalli
+maneloaliztli
+aquizaliztli
+iuhcayo
+yelizyotl
+Nauhcalpan
+acallapani
+acallapanaliztli
+acallapanani
+Naurua
+nauhyacoatl
+neximaloni
+neximaliztli
+Navarra
+navarrecatl
+ilhuicapatlani
+acalticaneminiliztli
+acalticanemini
+tlacatilizilhuitl
+Nayatlan
+nayatl
+mixcoatl
+aquimamatcayotl
+monequini
+monequiliztli
+amocotontlani
+anecuitiliztli
+amoliztli
+anecuitia
+amomicmana
+cuitlatzcopocyotl
+tequipanolli
+tequipanoa 1
+cemitta
+tequiyotl
+tliltli
+cacatzatlacatl
+cacatzactli
+capotzahui
+catzahuac
+tlillotl
+nemontemi
+yancuic leoni
+yancuic leoncatl
+yancuic mexicatl
+yancuic zellantecatl
+Nepallan
+nepaltecatl
+nepatl
+tlaloctli
+tlahuatl
+tlahuatini
+tlahuayo
+hueytlatlaxtli
+cepayauhtli
+cepayahui
+Nextlalpan
+Nezahualcoyotl
+Nezahualpilli
+nian
+ni-
+n
+Nicanahuac
+tapazolli 2
+ayahuitl 1
+ixhuihtli
+cepayahuitl
+cepayalli
+Nixer
+Nixeria
+nixeriatl
+cualocatl
+atlacuicihuatl
+cihuatontli
+cihuatoton
+coneyotl
+pilyotl
+chipilli
+conetontli
+piltontli
+pipiltoton
+miccacocone
+xotexocotl
+ahueyac
+amo quichihuilia
+amo micmana
+atletia 2
+a-
+amo
+tlahtoque
+pipiltin
+pipil
+pillotl
+pilticayotl
+pilotl 2
+yohualli
+Nochtlan
+cacayactli
+itoca
+tocayotia
+tocaitl
+cacanopalli
+nopalli
+Nopallan
+xoalacatl
+Nopaltepec
+ayamictlan
+ayamictlani
+Norvegia
+norveginecatl
+tehuantin
+tlaixmachiliztli
+tetlacaquitli
+tlacaquitia
+yancuilizcayotl
+yancuiliztli
+inic chicnahui
+nauhpoalomatlactli
+nauhpoaloncaxtolli
+cihuatlaixnamic
+oquichteopixqui
+noviembri
+tlaixnamic
+mixtli
+tlilecmixtli
+tlamixtentoc
+ayahui
+cuitlacuaitl
+cihuamontli
+Guadalupe Tonantzin
+toteotzin
+to-
+Anahuatlalpan
+Yancuic Hispania
+chicnahui
+yancuic
+Yancuic Leon
+Yancuic Anahuac
+cenyoyotl
+tlapohualiztli
+tlapoalli
+tlapohualli
+aic
+acoyotl
+aitzcuintli
+cuayolopilyotl
+cuayolopilli
 </div>	 
 		 
 	 </body>
