--- a/index.html
+++ b/index.html
@@ -6792,6 +6792,378 @@ otro
 otros
 Ottawa
 Otumba 
+paciencia
+paciencia
+paciente
+paciente
+pacifico
+padecer
+padecer
+padecimiento
+padrastro
+padre 
+padre
+padres
+padrino
+pagano
+pagar 
+pagar sentencia 
+página
+país
+País Vasco
+paisano
+paja
+paja para techumbre
+paja para techumbre
+pájaro carpintero 
+pájaro gobernador 
+pájaro gobernador 
+pájaro
+paje
+Pakistán
+pakistaní
+pala
+pala
+palabra antigua
+palabra de dios
+palabra
+palabras vanas
+palacete
+palacio de gobierno
+palacio
+palaciounicipal
+palacio real
+paladar
+paladear
+palanca
+Palau
+palenque
+palenque
+paleta
+paliacate
+pálido 
+palma de laano
+palma
+palmada
+palmar del desierto
+palmar
+palmera
+palo deadera
+palo
+paloma acuática 
+paloma 
+paloma torcaz 
+palomilla
+palomino
+palomita deaíz
+palpar
+palpitar 
+pan deiel
+pan dulce
+panrancés
+pan horneado
+pan
+pan
+pan tostado
+panadería
+panadero
+Panamá
+panameño
+Panchimalco 
+páncreas
+pandero 
+pando
+panera
+panera
+panquetzaliztli 
+pantaleta
+pantalla
+pantalón de gamuza
+pantalón de gamuza
+pantalon deezclilla
+pantalón de traje
+pantalón deportivo
+pantalón
+pantaloncillo
+panteón
+Pantitlán 
+pantorrilla
+panza
+pañal
+paño 
+pañoso
+pañuelo
+papá
+papa
+papá
+papa
+papada
+papagayo 
+papagayos
+Papaloapan 
+papalote
+papalote
+Papalotla 
+papaya
+papayo
+papel deaxtle
+papel higiénico
+papel
+papel viejo
+papelería
+papeles
+papera
+Papua-Nueva Guinea
+pápula
+Paquimé 
+para
+paracaidista
+paradero público
+paradigma
+parado
+paraguas azteca 
+paraguas
+Paraguay
+paraguayo
+paraíso celestial
+paraíso
+paraíso terrenal
+parálisis cerebral
+parálisis
+parálisisacial
+paralítico
+paraplejia
+parapléjico
+parar
+parar
+pararse
+parásito
+parcela
+parcela
+parecido
+pared
+pared
+pareja
+parentesco
+pariente
+parir
+Paris
+parlanchín
+parlero
+paro cardiaco
+párpado
+parque
+parral
+parrilla
+parroquia
+parroquiano
+parte delantera
+parte
+parte pequeña
+parte tresera
+partera
+participación
+participante
+participar
+particula
+particular
+partir
+partir
+partir
+parto
+parturienta
+pasa
+pasado
+pasadoañana
+pasaje de barco 
+pasaje
+pasajero de barco 
+pasajero
+pasaporte
+pasar
+pasar el agua
+pascua
+pasear
+paso del río
+paso
+pasta de dientes
+pastel
+pastel
+pastilla
+pasto
+pastor
+pastorear
+pastoril
+pastura
+pata de venado
+pata
+patada
+patear
+patente
+paternidad
+patín de nieve
+patín
+patio de servicio
+patio
+pato de lodo 
+pato
+pato silbón
+patria
+patriarca
+patrimonio
+patrimonio
+patrón
+patzohua 
+pavilo
+pavilo
+pavo joven
+pavo
+pavo real 
+pavos
+payasada tontería
+paz
+paz
+pe
+pecadoortal 
+pecar
+pececillos
+pechero
+pecho
+pechuga
+pecoso
+pecoso
+pediatra
+pediatra
+pedir
+pedo
+pedo
+pedorrear
+pedorro
+pedrada
+pegado 
+pegajoso
+pegajoso
+pegamento de caña
+pegamento
+pegar 
+pegarropa
+pegarse
+pegue 
+peine
+pejelagarto
+Pekín
+pelea
+peleado
+peleador
+pelear
+pelicano 
+peligro
+peligroso
+pellizco
+pelo chino
+pelo
+pelón
+pelota
+pena
+pena
+penacho
+penca de nopal
+pendejada
+pendejo
+pendejos
+pendiente
+pene erecto
+pene infantil
+pene
+pene
+península
+penitencia
+penitencia
+pensador
+pensamiento
+pensamiento sucio
+pensar
+pensar bien
+pensarse
+pensativo
+pentágono
+pentagrama
+peña
+peñasco
+peón
+pepenador
+pepino
+pepita
+pequeño
+pequeño
+pera
+peral 
+percusión
+perder sangre en sacrificio
+perder
+perderse 
+perdición
+perdida
+perdiz 
+perdón
+perdón 
+perdonar 
+perdurable
+peregrinación
+peregrinar
+peregrino
+pereza
+perezoso 
+perfección
+perfecto
+perforar 
+perfumar
+perfumar el ambiente 
+perfumar
+perfume
+perfume
+perfume
+pergamino
+perico de cabeza roja 
+periculosis
+perla
+pero
+perra
+perro chihuahueño
+perro galgo
+perro
+perro
+perros 
+perros
+perruno
+perseguido
+persona de
+persona
+perspectiva
+Perú
+peruano
+pervertido sexual 
+pesa
+pesado
+pesado
+pesar
+pesca
+pescadería
+pescado blanco 
+pescador
+pestaña
+pétalo
+petate
+petatearse
+petates
+petición
+petirrojo
+petróleo
+petrolero
+pez ángel
+pez espada
+pez
+pezón
 </div>
 
 <div class="nahuatl">
@@ -13545,6 +13917,378 @@ occequi
 occequintin
 Otahuac
 Otompan 1
+tlapaccaihyotl
+tlayollotepitzhuiliztli
+tlayollotepitzhuilli
+cocoxqui
+pactinemi
+aicni
+mazacihui
+tlaihiyohuiliztli
+tlacpatahtli
+tahtli
+teopixqui
+tetahnantli
+teoyotahtli
+tlateotocani
+patzcayotia
+tzacu
+centlaixtli 1
+tlalpan
+Vaxcapan
+altepetlacac
+zacatl
+zacacueitl
+ocozacatl
+acxoyatototl
+acolchichilin
+acolchichilli
+totontli
+xolotl
+Paquistania
+paquistaniatl
+tlacanoni
+tlaecaquetzaloni
+huehuetlahtolli
+tlahtolteotl
+tlahtolli
+ahuitlahtolli
+tecpantli
+altepepalehuatlahtoyocan
+tepancalli 2
+altepetlahtocan
+tlahtocan
+copactli
+cocomotza
+cuamitl
+Palao
+cuauhtzacualli
+cuauhtzacualli
+tzopelhuictli
+palyacatl
+zazamahuac
+mapalli
+zoyatl
+tetlatziniliztli
+zotollan
+zoyatlan
+ixhuatl 2
+cuahuatzalli
+matlacuahuitl 2
+ahuilotl
+huilotl
+cuixhuilotl
+coztipapalotontli
+huiloconetl
+achipotzacellotl
+tlatzinquilia
+teyollocuica
+tlaxcalnecuhtli
+tlaxcalchiancacatl
+caxtiltlaxcalli
+teixcalicuhtlaxcalli
+pantzin
+tlaxcalli
+tlatlaxcalli
+tlaxcalchihuayan
+tlaxcalchiuhqui
+Panama
+panamecatl
+Panchimalco
+necotecantli
+ehuahuehuetl
+tilinqui
+tlaxcalchiquihuitl
+tlacualchiquihuitl
+panquetzaliztli
+cihuamaxtli
+tlapaloni
+ehuacaltzatl
+yehuatl 3
+tequicaltzatl
+caltzontli
+itocaltzatl
+caltzatl
+caltzatontli
+mictlampan
+Pantitlan
+cotztli
+ititl
+conetzotzomatli
+canahuatl 2
+tapahuac
+netzomiloni
+tatah
+camohtli
+tahtzin
+teopixtlahtoani
+eltzotzolli
+alotl
+alomeh
+Papaloapan
+palalotli
+papalotli
+Papalotlan
+ochonetli
+ochonecuahuitl
+amamaxtli
+cuitlamatl
+amatl
+amazolli
+amanamacoyan
+amameh
+quechpozahuiliztli
+Yancuic Ginea
+topalihuiztli
+Paquimeh
+pampa
+ehecatemoani
+calmimilolcan
+amozayotl
+telquetzaqui
+nehualpetlatl
+tzotzomahquiahpalehui
+Parahuaria
+parahuatecatl
+ilhuicatliltic
+xochitlalpan
+xochitlalpan
+huallatzintli
+cocihuiliztli
+ixpoliuhqui
+coacihui 2
+cuatlatzoncocolli
+cuatlatzoncocoltic
+telquetza
+quetza
+moquetza
+cohuilli
+milpan
+altepemilpan
+achineneuhqui
+tepancuatl
+tepamitl
+niuhtli
+tlacamecayotl
+tehuanyolqui
+mixihui
+Parisi
+atlahtoallamini
+chachalani
+yolotencualiztli
+ixtentli
+aahuilpan
+xocomecacuahuitl
+tepoztlapechtlatzaloni
+teocalpan
+teocaltechpohui
+tlaixpancayotl
+tlahcotonyotl
+tlahcotontli
+tlaicampayotl
+tlamatquiticitl
+techmotlaliztli
+techmotlaliani
+techmotlalia
+ixcoyan
+cecniquizqui
+tlapania
+ehua
+xeloa
+tlaconehuitl
+mixiuhqui
+xocomecatetzolli
+tepoztic
+huiptla
+acalpatiotl
+nenemilli
+acallaneloani
+nenenqui
+tlalnemiamoxtli
+nalquiza
+pana
+paxcuatl
+pachialoa
+apanco
+centlaxitl
+tlanchipehualli
+necuhpantzin
+tlaoyotlaxcalli
+tepatli 2
+acaxacahuitztli
+ichcapixqui
+ichcapia
+ichcapixcayotl
+cahuayotlacualli
+chocholli 1
+xopalixtli
+xopalmachiotl
+xomotza
+panezqui
+tahyotl
+cepayauhcactli
+malacactli
+calixpan
+aitualli
+atapalcatl
+canauhtli
+huexocauhtli
+tlacatian
+hueytepachoteopixqui
+tlatquiyotl
+tlaquitquiyotl
+motecuhtli
+patzohua
+ocoicpayotl
+ocoicpayolotl
+alatl
+hueixolotl
+quetzaltotolin
+hueixolomeh
+xolopiyotl
+tlamatcayeliztli
+yocoxcayotl
+p
+temictlahtlacolli
+tlacoa
+michtoton
+tequitquitl
+tlacalaquilli
+yelciciyotcatl
+yayapalectic
+tlilectic
+conepatini
+coneticitl
+tlania
+miexiliztli
+iyelli
+iyelia
+miexini
+centlamotetl
+tlatecpahuilli
+zauhtic
+zazalic
+acachauhtli
+acatzacuiztli
+tecpahuia
+colotzincaztli
+motzicoa
+tlatecpahuiliztli
+tzincuahuaztli
+cuetzpalmichin
+Pequin
+tlaicaliztli
+tlaicalilli
+micalini
+icalia
+achalalatli
+ohuiliztli
+ohui 2
+tecotonaliztli
+xinotzontli
+tzontli
+atomiyo
+tlachtli
+ellelli
+huicayotl
+pantecatl
+tenochtli
+aompanehualiztli
+aompanehuac
+imaxtli
+temoayan
+tepolcuauhtli
+yolli 2
+tototl 2
+tepolli
+cemacoltlalpan
+techcatl 1
+nezahualiztli
+ayequimatini
+ayequimatiliztli
+tlalnamiquiliztli
+nenemilia
+tlamachilia
+monemilia
+ayequilmatini
+macuiltlatehuilli
+macuilamamachiotl
+topexitl
+tepexitl
+tlalxicpanhui
+pepenani
+ayoxoxouhcatl
+achelli
+pachtic
+-tzintli
+atzapotl
+atzapocahuitl
+tecomatl
+ezxaxahuani
+poloa 1
+poloa 2
+tlapoliztli
+tepatiliztli 2
+tepezolin
+pololocayotl
+tetlapopolhuiliztli
+popolhuia
+cemicac
+ohtlatocaliztli
+ohtlatoca
+ohtlatocani
+tlatzihualiztli
+tlatzihui
+yecauhcayotl
+yectic
+coyonia
+ahuachtia
+popochihua
+ahuialia
+popoxtli
+ahualiztli
+xochicopalli
+ehuamatl
+quiliton
+ixocuaitl
+epyollotli
+yeceh
+cihuaitzcuintli
+tetlamichichi
+amitzcuintli
+chichi
+itzcuintli
+itzcuintin
+chichimeh
+itzcuinyotl
+atlatlamachtilli
+-ecatl
+tecatl
+tlaixiuhliztli
+Incatlan
+incatl
+ahuilnemac
+tepozetilli
+yetic
+amehuatic
+tlamachihua
+michmaliztli
+michimacoyan
+amilotl
+michoani
+ixtzontli
+xochizuatl 1
+petlatl
+petlamiqui
+pepetla
+tlahuelcactli
+chichiltototl
+techiahuacayotl
+chiapopotlani
+ahuilohuitl
+huitzilmichin
+michin
+chichihualpiaztli
 </div>	 
 		 
 	 </body>
