--- a/index.html
+++ b/index.html
@@ -7164,6 +7164,217 @@ pez ángel
 pez espada
 pez
 pezón
+pianista
+piano
+piara
+picado
+picadura de serpiente
+picadura
+picar
+picar 
+pico de ave
+pico
+picoontañoso
+picoontañoso
+picoso
+pie
+pie
+piedad
+piedra caliza
+piedra de cuervo
+piedra dura
+piedra
+piedra labrada
+piedraaciza
+piedra plana
+piedra pómez
+piedra pómez
+piedra preciosa
+piedras
+piedrecillas
+piel blanda
+piel delaguey
+piel
+pierna
+pierna
+pieza
+pilar
+píldora
+pilote
+pima
+pimienta
+pinabete
+pinacate
+pinar
+pinar
+ping pong
+pingüica 
+pingüino
+pino 
+pino oyamel 
+pinole
+Pinotepa Nacional 
+pintar la boca
+pintar
+pintarse
+pintor
+pintura
+pinzón
+piña de pino
+piña
+piñata
+piñón
+piojo 
+piojoso
+pionero
+pipa
+pipa
+pirámide de la luna
+pirámide del Sol
+pirámide
+pirata
+pirúl
+pisada
+pisar
+pisar 
+piso
+pisón
+pistola
+pitáhaya
+pito
+placenta
+placentero
+plaga
+plancha de windsurf 
+plancha eléctrica
+plancha
+planeta
+planetario
+plano
+plano
+planta de algodón 
+planta del pie
+planta
+plantación de girasol 
+plantar caña
+plata 
+plataforma de saltos
+platanero
+platano
+plateado
+platería
+platero 
+platicar con alguien
+platillos
+plato
+plato pequeño
+playa
+playera
+plaza
+plazo
+plebe
+plebeyo
+pliego
+plomero
+plomo 
+pluma de ave
+pluma
+plumauente
+plúmbago 
+Plutón
+poblano
+poblar
+pobre
+pobre
+pobres
+pocas veces 
+Pochutla 
+pocilga
+poco 
+poco a poco
+poco a poco
+poco antes
+poda
+podado
+podador
+podar 
+podar
+poder 
+poder
+podredumbre
+poema
+poeta
+poeta
+polaco
+Polanco 
+polea
+polen
+policía
+poligala 
+polilla
+política
+político
+pollo
+pollo
+pollo rostizado
+pollos
+Polonia
+polvo
+polvora 
+polvoso
+pomada
+pomelo
+ponche
+poncho
+poner
+poner 
+poner en la lumbre
+poner en peligro 
+poner huevos
+poner ofrenda
+poner precio 
+ponerse los zapatos
+popa 
+Popocatepec 
+popoluca
+popote 
+poquito
+poquito
+por allí
+por aquí 
+por doquier
+poravor
+por laañana
+por la noche
+por la tarde 
+poredio de
+por qué
+por separado 
+por un rato
+por usted
+por
+por
+porque
+porra
+portal
+portería
+portón
+Portugal
+portugués
+porvenir
+posada
+posar
+poseedor
+posesión
+poste de luz
+postre
+potosino
+potrillo
+potro
+pozo
+pozo
+pozol
+pozole
 </div>
 
 <div class="nahuatl">
@@ -14289,6 +14500,217 @@ ahuilohuitl
 huitzilmichin
 michin
 chichihualpiaztli
+pianotini
+pianotli
+pitzopancalli
+tzopitic
+chopiniatl
+techopiniliztli
+tzopitia
+chopinia
+tototentli
+cuauhtlatzacualli
+tlacpac
+yacac
+cococ
+xotl
+xomachiotl
+icnoacayotl
+tenextetl
+cacalotetl
+tepactli
+tetl
+tenacaztli
+tepicqui
+tepatlachtli
+xalmalacatl
+tecalli 2
+tlazoltetl
+tete
+tetoton
+tlaixyamanilli
+mexayacatl
+cuetlaxtli
+imetztli
+metztli 2
+centzotl
+acaxtontli
+motolotlanoquiloni
+atzontzontli
+pimatl
+caxtilchilli
+acalocuahuitl
+pinacatl
+ocotlan
+ocoyotl
+nematopehuiliztli
+tepeizquitl
+totoxolotl
+ocotl
+oyametl
+pinolli 2
+Pinoltepan
+camacuiloa
+pa
+tlapalhuia
+tlacuilo
+tlacuiloyotl
+tzintzontototl
+ocentli
+matzatli
+tlapalxoctli
+ococenyollotli
+atemitl
+atempachtli
+pehuani
+popocuauhcomitl
+acayetl
+metztli icpac tlamanacalli
+tonatiuh icpac tlamanacalli
+tzacualli
+acalteichtecamictini
+copalcuahuitl
+xomachiotl
+tlatza
+xoquequetza
+tlalpepechtli
+tlaltehuiloni
+tepozteixiuhmitl
+tzaponochtli
+pitzalli
+ihuicatl
+ahuiani 1
+chahuitztli
+acalpantli
+tepoztlahuilcomalli
+tepozamatl
+citlaltzitzimitl
+ilhuicatlayocan
+amaometlacuilolli
+patlachtic
+cuauhichcatl
+xopalli
+cuauhtontli
+acahuallan
+acayoa
+iztateocuitlatl
+tepancholoantli
+tzapalolcuahuitl
+tzapalotl
+iztateocuitlatic
+iztateocuitlapitzcalli
+iztateocuitlapixqui
+notza 2
+tepozcaxpechtli
+caxpechtli
+cacaxtotl
+xaltentli
+ichcanemaztli
+tiamicoyan
+tecentlayecoltiliztli
+macehualtin
+macehualli 2
+ceamatl
+temetzpixqui
+temetztli
+ihuitl
+totolacatl
+meyalihuitl
+tlepatli
+ahuatetztli 2
+pueblatl
+altepetlalia
+icnotl
+motolinqui
+icnotlacameh
+zanqueman
+Pochotlan
+coyamecalli
+amo miac
+atzan
+iyolic
+yeyehua
+tlanatequiliztli
+tlayectilli
+tlayectiani
+natequi
+yectia
+huelitiyotl
+hueliti
+palani 1
+xochicuicatl
+xochicuicani
+tlahtocuicani
+polotl
+Polanco
+atochietl
+xochimeyallotl
+tlapixqui
+xochipitzahuac
+cuauhocuilli
+cemitquimatiliztli
+cemitqui
+piotl
+pipiolotl
+totolnacatl tzoyonqui
+piomeh
+Polonia
+teoctli
+tlaquiztlalli
+teuhyo
+oxitl 1
+hueyxocotl
+pontzin
+tilmahtli
+mana 3
+tlalia 3
+tlepantlalia
+ohuitilia 2
+atetlaza
+tlamanaltlalia
+patiotlalia
+mocactia
+acalcuexcochtli
+Popocatepec
+popolocatl 2
+popotli
+achiton
+achitzin
+ompic
+icanican
+nohuian
+nimitztlatlauhtia
+moztla teotlac
+yohuac
+ipan teotlactli
+pal-
+tlehca
+xeliuhca
+huecauhtica
+mopampatzinco
+ipampa
+ic
+nic
+cuauholotli
+calixecatl
+tlachtiloyan
+aitualoyan
+Lusitania
+lusotl
+hualquiztli
+teceliloyan
+motlahuia
+chilhuac 2
+axcaitl
+tlacoicpilli
+tecuacualiztli
+potositl
+cahuayoconetl
+rrehotl
+aticuihuayan
+ayolhuaztli
+potzolli 2
+potzolli 1
 </div>	 
 		 
 	 </body>
