--- a/index.html
+++ b/index.html
@@ -7375,6 +7375,184 @@ pozo
 pozo
 pozol
 pozole
+precio
+precisamente 
+predicador
+predicar 
+preferido
+preferir 
+pregonado
+pregunta 
+preguntar 
+prenda
+prensa
+prensador 
+preocuparse
+preparatoria
+prepucio
+presa 
+presa
+presa
+presencia
+presentación
+presentado
+presentar 
+presente
+presente
+presente
+presión
+presión sanguínea
+prestado
+prestador
+prestamo
+prestar 
+presumido
+presunción
+presunto
+presuroso
+prevenir
+previsión
+prima
+primavera
+primavera 
+primaveral
+primaveral
+primero
+primitivo
+primo
+principado
+príncipe
+príncipe
+principio
+prisión
+prisionero
+privilegiado 
+privilegiar 
+privilegio
+proa 
+probable
+probablemente
+probablemente 
+probado
+probar
+probar 
+procesador
+proceso
+procurador
+procurador
+prodigo 
+producto
+proeza
+profecía
+profesión
+profetizar
+profetizar 
+profundidad
+profundizar
+progresar
+progreso
+prohibición
+prohibido
+prohibido
+prólogo
+promesa
+prometido
+pronombre 
+pronosticado
+pronosticar 
+pronostico
+pronto
+propiedad
+propietario
+proponer
+proponer 
+proporción
+propósito
+propósito
+propuesta
+prosperar 
+prosperidad
+prospero
+prostituta
+prostituta
+protección
+protector
+protegerse del viento
+protestante
+protestante
+protestantismo
+protestantísmo
+provecho
+proveedor
+provocación
+provocado 
+provocador
+provocar 
+proximidad
+proximidad acercamiento
+proyectil
+prudencia
+prudencia
+prudente
+prudente
+prudente
+prueba
+prurito
+psicología
+psicólogo
+psiquiatra
+psiquiatría
+pubisemenino
+pubisasculino
+publicación
+publico
+pudrirse
+Puebla
+puebla
+puente
+puerco espín
+puerco
+puerta de la ciudad
+puerta
+puerto
+puertoarítimo 
+Puerto Rico
+puertorriqueño
+pues
+puesto que
+pulga
+pulgar
+pulgoso 
+pulguero
+pulmón
+pulpa de tamarindo
+pulpa
+pulpo 
+pulque
+pulque
+pulso
+puma león americano 
+punta
+puntada
+puntaje
+puntal
+puntero 
+punto
+punto y coma
+punzada
+punzadura
+punzar
+punzar 
+punzón
+puñado
+puñal
+puño 
+pupila
+pureza
+purgatorio
+purificación
+puro
+Putla 
 </div>
 
 <div class="nahuatl">
@@ -14711,6 +14889,184 @@ aticuihuayan
 ayolhuaztli
 potzolli 2
 potzolli 1
+patiuhtli
+oc cenca ihcuac
+tlateomani
+moyahua
+tetlapalnahuilli
+tlapalnahuiltia
+tzatzini
+tetlaniliztli
+tlahtolana
+yoyomitl
+tlamaliztli
+tlapatzconi 1
+tequipachoa
+telpochpan
+xipintli
+atzacualli
+amanalli
+atecochtzacualli
+tlaixpanyotl
+tetlauhtiliztli 2
+tetlauhtilli 1
+tlauhtia
+tlaixpantilli
+pialli
+axcaniliztli
+cuehzohuac
+tetecuicatl
+tetlaneuhtilli
+tetlaneuhtiani
+tetlaneuhtiliztli
+tlaneuhtia
+ahuilatoani
+atlamatiliztli
+atlamati
+mocihuiani
+xonexca
+tlachtopaittaliztli
+cihuaixoyuhtli
+xopanitztempan
+xopaniztli
+xopanitztempacayotl
+cueponcayotl
+inic ce
+achtotlacatl
+yezini
+tlahtoapilcayotl
+piltlahtoani
+pilli 1
+tzintiliztli
+caltzacualco
+malli
+teicnelilli
+icnelia 1
+teicneliloni
+acalyacatl
+neltililoni
+azo
+neltililoztica
+tlaneltililli
+machilia
+yeyecoa 2
+cuatlapoalcalli 1
+huiliztlahtolli
+tlatalhuiani
+altepepalehuini
+ahuilquixtiani
+quianquiztiloni
+oquichyotl
+tlatopaitoliztli
+netoltializtli
+huehcatenehua
+achtopaitoa
+centlinayotl
+aaci 1
+acoquitza
+acoquitzaliztli
+achihualiztli
+achihualoqui
+achihualoni
+amoxtlahtoalpehualiztli
+tlatenehualiztli
+tlahuelittalli
+achcaitl
+tlayolteohuilli
+yolteohuia
+tlayolteohuiliztli
+toiuhca
+yauhcayotl
+axcahuac 2
+teixpantilia
+cemihtoa
+ecahuaztiliztli
+nelhuiliztli
+tlacemihtoliztli
+tlacemihtolli
+cempacca
+quicempaccayotl
+tlacempactiani
+cihuahuiani
+ahuiani 2
+ecahualiztli
+ecauhyo
+ehecahuia
+tlateoquixtiani
+tlalnetoqui
+tlalnetoquixtianayotl
+tlalnetoquiyotl
+ontequixtiliztli
+tlaimatqui
+tlatlahuelcuitiliztli
+tlatlahuelcuitilli
+tlatlahuelcuitini
+tlahuelcuitia
+tetech
+tech
+tepozmitl
+yolomachiliztli
+yolizmatcayotl
+mimatini
+yolomatqui
+yolizmatini
+tlaneltiliztli
+cuetzoquiliztli
+paccayematiliztli
+paccayematini
+tlahuililocani
+tlahuililoliztli
+cihuatepoltzontli
+tepoltzontli
+tlatquinamaquiliztli
+tecuhtequitl
+palani 2
+Puebla (estado)
+tlacanechicolli
+tenolli
+huitzpitzotl
+pitzotl
+altepequixoayan
+tlatzacuillotl
+acaltecoyan
+acalquixoayan
+Necuiltonolacalquixoayan
+necuiltonolacalquixoani
+cah
+yehica
+tecpintli
+mapiltecuhtli
+tecpinyo
+tecpintlan
+tochichin
+palxocoyonacatl
+yonacatl
+atocatl
+necuhoctli
+poloqui
+tlalhuacuicatl
+miztli
+yacatli
+tlatacahuitzolli
+tlapoalmachiotl
+tlaxillotl
+acamapilli
+tliltetl
+tliltehuantli
+tlatzapinilli
+tlatzapiniliztli
+zoa 1
+tzapinia
+tepozomitl
+mapictli
+tepozteixmitl
+maololli
+ixteuhtli
+chipahuayotl
+tetlechipahualoyan
+cualtililocayotl
+atlaneyollo
+Poctlan
 </div>	 
 		 
 	 </body>
