--- a/index.html
+++ b/index.html
@@ -7552,7 +7552,75 @@ pureza
 purgatorio
 purificación
 puro
-Putla 
+Putla
+qué
+quebrada
+quebradizo
+quebrado
+quebrado
+quebrarse el craneo
+quebrarse el cuello
+quebrarse el espinazo
+quebrarse el pie
+quebrarse laano
+quebrarse la pierna
+quebrarse los dientes
+quebrarse un dedo
+quebrarse un hueso
+quebrarse
+Quecholac 
+quecholli 
+quechua
+quedar
+quedarse atrás
+quejido
+quelite
+quemada
+quemado
+quemado
+quemado
+quemadura
+quemar
+quemar
+querer 
+quererse 
+Querétaro 
+querido niño
+quesillo
+queso amarillo
+queso añejo
+queso chihuahua
+queso chihuahua
+queso cremoso
+quesoresco
+quesoundido
+queso
+quesoanchego
+queso panela
+quetzal 
+Quetzalcoatl 
+Quetzalpapalotl 
+Quetzaltenango 
+Quetzaltepeque 
+Quetzin 
+quezquimel
+qui
+quiebre
+quién
+quiere decir
+quijada
+química
+químico
+quince
+Quintana roo
+quinto
+quitar
+Quito
+quizá algún día
+quizá aún no
+quizá si
+quizá
+quizá
 </div>
 
 <div class="nahuatl">
@@ -15067,6 +15135,74 @@ tetlechipahualoyan
 cualtililocayotl
 atlaneyollo
 Poctlan
+ma
+Quebec
+poztequi
+tlatlapantli
+poztectli
+cuatlapana
+cuechpoztequi
+cuitlapoztequi
+xopoztequi
+mapoztequi
+metzpoztequi
+tlancotona
+mapilpoztequi
+omipoztequi
+poztequi
+Quechollac
+quecholli 2
+quechoatl
+neztica
+huehca neztica
+tecihuitiliztli
+quilitl
+tlatlatl
+tlatlac
+cahuani
+chichinolli
+tlatlatiliztli
+tletia
+chichinoa
+nequi 2
+monequiltia
+Chichimecalco
+piltzintli
+mecatlatetzauhtli
+coztlatetzauhtli
+zoltlatetzauhtli
+chiltlatetzauhtli
+cococ tlatetzauhtli
+palticahuatlatetzauhtli
+yancuic tlatetzauhtli
+tlatetzauhtlatililli
+tlatetzauhtli
+caxtiltlatetzauhtli
+iztatlatetzauhtli
+quetzaltototl
+Quetzalcoatl
+Quetzalpapalotl
+Quetzaltenanco
+Quetzaltepec
+Quetzin
+quechquemitl
+q
+tlatlaxamaniliztli
+aquin
+quihtoznequi
+camachalli
+payelizyotl
+payelizyomitilli
+caxtolli
+Quintana Roo
+macuillo
+cuilia
+Quito
+aquin ixnetla
+acazoyemo
+amozan quemah
+aceh
+cox	
 </div>	 
 		 
 	 </body>
