--- a/index.html
+++ b/index.html
@@ -7621,6 +7621,437 @@ quizá aún no
 quizá si
 quizá
 quizá
+rábano
+rabia
+rabioso
+racha de viento
+racimo
+ración
+radio
+radiotelescopio
+raiz blanca
+raíz
+raíz 
+raíz
+rajadura
+ralo
+rama de laurel
+rama
+ramo
+ramoso
+rana 
+rana verde
+ranacuajo
+rancho
+rancio
+rapado
+rapar 
+rapaz 
+rápido
+rápidos de río
+raqueta
+raro 
+rascacielo
+rascacielo
+rascado
+rascador
+rascadura
+rascar
+rasgado
+rasgadura
+rasguñado
+rasguñar 
+rasguñar 
+rasguño
+raspado
+raspador
+raspadura
+raspar 
+raspar elaguey 
+rasparse
+rastreado
+rastrear 
+rastrillo
+rastro
+rastro
+rasuradota eléctrica
+rata almizclera
+rata
+rata 
+rato
+ratón 
+ratoncillo
+ratonera 
+raya
+rayado
+rayar 
+rayo del sol
+rayo
+rayo
+raza
+razón
+razonable
+razonamiento
+razonar
+real 
+realeza
+reanimar 
+rebaja
+rebajar
+rebajar 
+rebanada
+rebanado
+rebanar
+rebaño
+rebelado
+rebelador
+rebelar 
+rebelde
+rebeldía
+rebotado 
+rebotar 
+rebote
+rebozo
+rebozo
+rebuznar
+rebuznido
+recabado
+recabar
+recaer
+recaída
+recalcado
+recamara
+recatado
+recatar
+recaudo
+rechazado
+rechazar
+rechazo 
+rechinar
+recibimiento
+reciente a uno y a otro
+reciente
+reclamación
+reclamado
+reclamar
+reclamo
+recogedor
+recogido
+recogimiento
+recolección
+recolectado
+recolectar
+reconciliación
+reconciliado
+reconciliar 
+reconocer
+reconocido
+reconocimiento
+recordar
+recrear 
+recto
+recubrimiento
+recuerdo
+recurrido
+recurrir
+red de pescar 
+red
+redaño 
+redentor delundo
+redentor
+redondear 
+redondear
+redondez
+redondo
+reducido
+reducir 
+refinería
+reflejarse en el agua 
+reflejo
+reflexión
+reforma
+reformado
+reformar
+refresco
+refrigeración
+refrigerador
+refrigerador
+refrigerar
+refrigerio
+refugio
+regalar
+regalo
+regañado
+regañar
+regaño
+regatear
+regente
+regente del barco 
+regente
+regido
+regiduría
+regimiento
+región
+Región Huasteca
+Región Mixteca
+Región Otomí
+Región Zapoteca
+registro civil
+registro literario
+registro
+regla
+regocijado
+regocijar
+regocijo
+regresar a casa
+regular
+reina
+reinar
+reir demasiado
+reir
+relacionado
+relacionar 
+relamerse 
+relamido
+relámpago
+relampaguear
+relatar libros
+relativo al lugar
+relato
+relator 
+relicario
+relieve
+religión
+religiosamente
+religioso
+relinchar
+relinchido
+reliquia
+rellenar
+rellenar
+relleno
+reloj
+reloj
+relucido
+reluciente
+relucir
+relumbrado 
+relumbrar
+remador
+remedar
+remedío
+remembrar
+remendar
+remiendo
+remitente
+remo
+remojar 
+remolino
+remolque
+rencor olvidado
+rendido
+rendir
+rendirse
+renegado
+renegar 
+renglón
+reno 
+renovado
+renta
+rentar
+rentar casa
+rentar tierras
+renunciado
+renunciar
+reñido 
+reñir
+reñir
+repartición
+repartido
+repartidor
+repartir 
+reparto
+repicar
+repicar la campana
+repollo
+reportero
+reposado
+reposo
+represa
+represa
+reproducir
+reproductor de discos compactos
+reproductor de videos
+reptil
+republica
+republicano
+reputación
+rerponder
+res
+resbaladizo
+resbalar
+resbaloso
+resfriado
+resfriar 
+resfriarse
+resfrío
+resignar
+resina de árbol
+resina de pino
+resina
+resina
+resistente 
+resonancia
+resonante
+respetado
+respetar 
+respeto
+respiración
+respiradero
+respirar
+resplandecer
+resplandor
+responder 
+respondido
+respuesta 
+respuesta
+restaurante
+restaurar
+restregar
+resucitado 
+resucitar
+resucitar
+resurrección
+resurrección 
+resurreción 
+retención
+retoño
+retorcer
+retorcer
+retorcido
+retorcijón
+retornar 
+retorno
+retorno 
+retro-excavadora
+reuma
+reunir 
+reunirse
+revelación
+reventado
+reventar
+reventón
+reves
+revivido
+revivir
+revolcadero
+revolcado
+revolcar 
+revoltoso
+revoltura
+revolución
+revolvedor
+revolver 
+revolver
+revuelto
+rey
+rezandero
+rezar
+rezo
+riachuelo
+rico
+rico
+ridiculizar
+rienda
+riesgo
+rifa
+rifado
+rifar 
+rifle
+rigurosamente
+riguroso
+rincón
+rincón
+rinoceronte
+riña
+riñón
+río de cañaverales
+Río de Janeiro
+río
+río
+riojano
+riojano 
+riqueza
+risa
+risa
+risco
+risueño
+rivera
+rizado
+rizo
+robalo
+robar
+robar 
+roble
+robot
+robótica
+roca
+rociado 
+rociar 
+rociar
+rociar
+rocío
+rodante
+rodar
+rodilla
+rodillo
+rodrigón
+roer 
+rogado
+rogar 
+rogar
+roído
+rojo óxido
+rojo
+rojo
+rollo
+romería
+rompeolas
+romper
+romper
+rompeviento
+roncar
+roncar
+roncha
+ronco
+rondar
+ronquido
+roña
+ropa de niño
+ropa
+ropa
+ropa interior
+ropa vieja
+ropero
+rosa 
+rosa
+rosaexicano
+rosa
+rosal
+rosario
+rosca
+roseta deaíz
+rri
+ruda
+ruda
+rueda
+rueda
+ruego
+rugir 
+ruido
+ruiseñor
+ruleta
+ruta marina 
 </div>
 
 <div class="nahuatl">
@@ -15202,7 +15633,438 @@ aquin ixnetla
 acazoyemo
 amozan quemah
 aceh
-cox	
+cox
+chilcamohtli
+chichitlahuelilocayotl
+chichitlahuelilo
+ehecatontli
+cemocholli
+techpohui
+rradiotl
+rradioilhuicalli
+cimatl 2
+nelhuatl
+tlalnelhuatl
+nelhuayotl
+tzincuehualli
+xaxaltic
+ehecapatli
+macuayotl
+cuauhxihuitl
+cuauhmayo
+milcacalatl
+calatl
+atepocatl
+calixtlahuatl
+xoyauhqui
+tetzonximalli
+tzonxima
+tzantlahueliloc
+iciuhcac
+xaxamacatiuh
+cuauhmatlatl
+cencamochihuac
+hueytlazollolli
+hueycalli
+netatacac
+netataconi
+netataquiliztli
+xaxacualoa
+tlatzatzayac
+tlatzatzayaliztli
+tlaixmomotzolli
+ixtoxoma
+ixmomotzoa
+tlaixmomotzoliztli
+tlachiquilli
+tlachiqui
+tlachiquiliztli
+chiqui
+quichilia
+motlaquichilia
+tlatlanecuilli
+tlanecui
+tlazoloni
+tlatlanecuiliztli
+temictlan
+neximaloni olinqui
+tepanchichi
+altepetuzan
+xaltuzan
+yecuelyehuac
+quimichin
+quimichtontli
+quimichtlapehualli
+huahuaniliztli
+tlachichitli
+chichia 2
+tonamitl
+tlatomitl
+tletletl
+mecayotl
+ixtlamachiliztli
+ixtlamaqui 1
+ixtlamaquiliztli
+ixtlamaqui 2
+tencuhyotl
+teyacancayotl
+yolitia
+atlelitiliztli
+atlelitia
+atletilia 1
+tlaxoxotli
+tlaxoxotlalli
+xoxotla
+centlamayolcatl
+nenextilli
+quinextiani
+nextilia
+tetlacamatini (amo)
+tetlacamatiliztli (amo)
+tlatempixolli
+tempixoa
+tlatempixoliztli
+payatl
+necuatlapacholoni
+axnotzatzi
+axnotzatziliztli
+concuitli
+concui
+cocoloilichtia
+cocolilochtiliztli
+tlacacatzalli
+cochiantli
+mimactinemini
+mimacti
+concuiliztli
+tlahuelcaqui
+mayahui
+tlahuelcaquiliztli 2
+nanatza
+tlaceliliztli
+ahuic
+paltic
+netlacuepiliztli
+teilhuilli
+teilhuia
+teilhuiliztli
+pepenaloni
+pepenalli
+tlanechicoliztli
+pizcaniliztli
+pizcanilli
+pizcani
+tetlacecehuiliztli
+tetlacecehuilli
+tlacecehuilia
+neyollomaxi
+neyollomaxilli
+neyollomaxiliztli
+ilnamiqui 1
+aana 2
+yohuicuitl
+malcochtli
+tlalnamiquiliztli
+huellamatini
+cualtoca
+michmatlatl
+matlatl
+telmatl
+cemanahuac hueytlahtoani
+temaquixtiani
+yahualacachoa
+yahualoa
+yahualiuhcayotl
+ololtic
+tlanechicolli
+nechicoa 1
+ahuelnemiliztli
+atezcahuia
+tezcatiliztli
+neyolnonotzaliztli 2
+tlapapatiliztli
+tlapatiani
+papatia
+tzopelatl
+cececotlazaliztli
+cececotlazaloni
+cececalli
+cececotlaza
+cecotlazaliztli
+choloacoyan
+nemactia
+tetlauhtilli 2
+tlacuitzolli
+tlacuitzoa
+tlacuitzoliztli
+achinicnextia
+memachiliani
+acalnemachiliani
+teyacanani
+teyacanatli
+teyacanatlahtocan
+teyacanaliztli
+tlalcapan
+Cuextecapan
+Mixtecapan
+Otompan 2
+Zapotecapan
+amatlacuiloloaltepeyocan
+amoxmachiotl
+tlacemachtiliztli
+tlahuahualoni
+papaquini
+ahahuia
+ahuiatiliztli
+caltza
+nahuatilia
+cihuatlahtoani
+tlahtocati
+tequihuetzca
+huetzca
+tenonotzalli
+nonotza 2
+papaloa 2
+papaloni
+tlapetlanalotl
+tlapetlani
+amoxpohua
+cacan
+zazanilli
+tenonotzani
+necauhcayotl
+tencahualli
+yecnemiliztli
+yecnemiliztica
+yecnemini
+cahuayopipitzca
+cahuayopipitzaliztli
+necauhcatl
+pachiuhqui 1
+atipochoa
+pachiuhqui 2
+tlatepoztlamachotiloni
+tonalmachiotl
+tlanextilli
+chipaccaltic
+tlanextia
+pepeyocac
+pepeyoca
+tlanelo
+tlahuica
+tlapatiliztli
+tlalnemictia
+chicha 2
+tlachichitl 2
+amatlacuilolmachiolli
+ahuictli
+apachoa
+ehecamalacatl
+calmimilolchan
+polotiliztli
+tlacalaqui
+tema 1
+calaqui 2
+tlacentelchihuani
+centelchihua
+cempantli
+hueymazatl
+tlapapatilli
+tlatquitlacalaquilli
+tlatquicehuia
+calcehuia
+tlalcehuia
+mahuitzoltelchihuani
+mahuitzoltelchihua
+mohuetehuatli
+mohuetehua
+ahua
+tlatlachicohuiliztli
+tlatlachicohuilli
+tetlaxexelhuiani
+tlachicohuia
+tetlaxexelhuiliztli
+tzitzilitza
+tzilinia
+axoiztaquilitl
+hueltlacuilo
+yocuxcayo
+necehuiliztli
+manalli 1
+nalli
+copina 2
+cidicaxitl
+videocaxitl
+tlalyolcatl
+tlacatlahtocayotl
+tlacatlahtocayo
+teyotl
+nanquilia
+centecuacuahue
+alahuac
+alahua
+alactic
+tlacecelilli
+itztilia 1
+itztilia 2
+tlaitztililiztli
+zazamahua
+cuauhoxitl
+ocotzotl
+uxitl
+mizquicopalli
+teixnamiquini
+caquiztiliztli 2
+caquiztini
+tlaixtililli
+ixtilia 2
+tlaixtililiztli
+neihiyotiliztli
+neihiyotiloni
+ihiyotia
+pepetlaca
+tlanextiliztli
+tlaxinia
+tenanquililli
+tetlaxiniliztli
+tenanquiliztli
+tlacualcoyan
+patia 2
+xacualoa
+mozcaliqui
+yoliliztia
+mozcalia
+nezcaliliztli
+mozcaliztli
+yolilizyotl
+tetzicoliztli
+quiotl
+tetzilmalia
+necuiloa
+tetzilmalli
+iticomoquiliztli
+cuepayotia
+tlacuepayoliztli
+cuepayotl
+tlalxiloqui
+xochichihuaztli
+centilia 1
+mocentlalia
+tlanenextiliztli
+tlecueponilli
+tlecueponi
+tlecueponiliztli
+nacacic
+cuepayolli
+cuepayolia
+nemimiloyan
+nemimilolli
+mimiloa
+atlacacemelli
+tlacocoltiliztli
+icniuhyaoyotl
+tlatenexhuiani
+tenexhuia
+cocoltia
+tlanemelolli
+hueytlahtoani
+moteopeyotziani
+moteopeyotzi
+moteopeyotziliztli
+atoyatontli
+tlatquihuac
+huelic
+nahuilahua
+temecatl
+aquiliztli
+tequiquinatzaliztli
+tequiquinatzalli
+quiquinatza
+cuauhtlacuicuihuani
+tehuellotica
+cecepactic
+caltechtli
+xomolli
+rrinocerontli
+cocolli 2
+necotetencatl
+aacatlan
+Cariocatitlan
+apan 1
+atoyatl
+rrioxanecatl
+rrioxatl
+tlatquiliztli
+huetzquiliztli 2
+huetzcayotl
+tehuehueyac
+huetzquiztomac
+atoyatentli
+xinotic
+xinotl
+tepemichin
+ichtequi
+nahuaya
+pochotl
+tepozcuayollotl
+tepozcuayolloyotl
+texcalli
+ahuacho
+alpichia
+ahuachia
+atequia
+ahuachtli
+tlayohualochtiani
+tlayohualochtia
+tlancuaitl
+cuauhmetlapilli
+tlatoquilotl
+tetequi 1
+tlatlacahuilolli
+tlacahuiloa
+tlatlauhtia
+tlacuacuatli
+achiotic
+chiltic
+chichiltic
+mimiltic
+tlamacehualnemiliztli
+xaxamacani
+cotoni
+tzatzayania
+ehecatzacuilli
+icotoca
+cotaloa
+cacamolihuiliztli
+itzahuacac
+yohuallapia
+icotoquiliztli
+xiyotl
+conetilmalli
+tlaquemitl
+tzotzomatli
+tlanauhtli
+tilmatihuac
+cuauhtilmacalli
+xochizuatl 2
+tlatalehualtic
+tlatzalehualtic
+xochipaltic
+xochizuatlan
+teocuauhmecatl
+tlaxcalcolli
+izquixochitl
+r
+coapatli
+acuatzin
+temalacatl
+malacatl
+tlatlauhtiliztli
+coyohua
+xitecuicaliztli
+chiquimolin
+malacapatolli
+acalohtli 1
 </div>	 
 		 
 	 </body>
